crates/crucible-cli/src/tui/testing/snapshots/crucible_cli__tui__testing__popup_snapshot_tests__session_popup_tests__popup_session_many.snap
---
source: crates/crucible-cli/src/tui/testing/popup_snapshot_tests.rs
expression: h.render()
---
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
> chat-2025-01-20-sess000 Session from day 20                                   
  chat-2025-01-20-sess001 Session from day 20                                   
  chat-2025-01-20-sess002 Session from day 20                                   
  chat-2025-01-20-sess003 Session from day 20                                   
  chat-2025-01-20-sess004 Session from day 20 ↓                                 
                                                                                
 >                                                                              
                                                                                
▸ Plan │ Ready
