crates/crucible-cli/src/tui/testing/snapshots/crucible_cli__tui__testing__popup_snapshot_tests__session_popup_tests__popup_session_over_conversation.snap
---
source: crates/crucible-cli/src/tui/testing/popup_snapshot_tests.rs
expression: h.render()
---
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
 > Hello                                                                        
                                                                                
 ● Hi! How can I help?                                                          
                                                                                
> chat-2025-01-04-abc123 Chat session from yesterday                            
  chat-2025-01-03-def456 Earlier chat session                                   
  chat-2025-01-02-ghi789 Older chat session                                     
                                                                                
 >                                                                              
                                                                                
▸ Plan │ Ready
