crates/crucible-cli/src/tui/testing/snapshots/crucible_cli__tui__testing__popup_snapshot_tests__session_popup_tests__popup_session_second.snap
---
source: crates/crucible-cli/src/tui/testing/popup_snapshot_tests.rs
expression: h.render()
---
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
  chat-2025-01-04-abc123 Chat session from yesterday                            
> chat-2025-01-03-def456 Earlier chat session                                   
  chat-2025-01-02-ghi789 Older chat session                                     
                                                                                
 > /resume                                                                      
                                                                                
▸ Plan │ Ready
